crates/stems-tui/src/tests/snapshots/stems_tui__tests__actions__graph-watch-paused-80x24.snap
---
source: crates/stems-tui/src/tests/actions.rs
expression: text
---
 stems · process-chain           1 [Graph]  2 Table  3 Detail  4 Logs  5 Events
             ┌────⏸┐
         ╭──▶│ b ✓ ├──╮
┌─────┐  │   └─────┘  │   ┌─────┐
│ d · ├──┤            ├──▶│ a ✗ │
└─────┘  │   ┌─────┐  │   └─────┘
         ╰──▶│ c ↻ ├──╯
             └─────┘














 ✓ healthy  ! degraded  ✗ failed  · stopped  ? unknown  ↻ transitioning
 process-chain · profile - · daemon pid 4242 · ✓1 !0 ✗1 ·1 ?0 ↻1 ? help · q qui…
