crates/stems-tui/src/tests/snapshots/stems_tui__tests__actions__modal-palette-80x24.snap
---
source: crates/stems-tui/src/tests/actions.rs
assertion_line: 607
expression: text
---
 stems · process-ch…  1 Graph  2 [Table]  3 Detail  4 Logs  5 Events  6 Scripts
  STEM TYPE    STATUS     REASON       PID    PORTS  UPTIME RESTARTS CPU   MEM
› a    pro┌ Command palette ─────────────────────────────────────────┐
  b    pro│ > rest_                                                  │
  c    pro│ › restart a                                              │
  d    pro│   restart b                                              │
          │   restart c                                              │
          │   restart d                                              │
          │   reset a                                                │
          │   reset b                                                │
          │   reset c                                                │
          │   reset d                                                │
          │ ↑/↓ move · Enter run · Esc close                         │
          └──────────────────────────────────────────────────────────┘








 ■ x stop  ↻ r restart  : scripts  o editor  ? more
 process-chain · profile - · daemon pid 4242 · ✓2 !0 ✗0 ↯0 ·1 ?0 ↻1 ? help · q …
