crates/stems-tui/src/tests/snapshots/stems_tui__tests__actions__modal-restart-confirm-80x24.snap
---
source: crates/stems-tui/src/tests/actions.rs
assertion_line: 607
expression: text
---
 stems · process-chain           1 Graph  2 [Table]  3 Detail  4 Logs  5 Events
  STEM TYPE    STATUS     REASON       PID    PORTS  UPTIME RESTARTS CPU   MEM
› a    process ✓ healthy  ready (tcp)  101    18301  9s     0
  b    process ✓ healthy  ready (tcp)  102    18302  8s     0
  c    process ↻ starting -            103    18303  1s     0
  d    process ✓ healthy  ready (tcp)  104    18304  1s     0


            ┌ Restart a ───────────────────────────────────────────┐
            │ also restart 3 dependants (b, c, d)? [y/N]           │
            │                                                      │
            │ y    restart them too, in dependency order           │
            │ n    restart only a                                  │
            │ Esc  cancel                                          │
            └──────────────────────────────────────────────────────┘







 ■ x stop  ↻ r restart  : scripts  o editor  ? more
 process-chain · profile - · daemon pid 4242 · ✓3 !0 ✗0 ↯0 ·0 ?0 ↻1   restart d…
