crates/stems-tui/src/tests/snapshots/stems_tui__tests__actions__modal-script-menu-80x24.snap
---
source: crates/stems-tui/src/tests/actions.rs
expression: text
---
 stems · process-chain                      Graph [Table] Detail  Logs  Events
  STEM TYPE    STATUS     REASON       PID    PORTS  UPTIME RESTARTS CPU   MEM
  a    process ✓ healthy  ready (tcp)  101    18301  9s     0
› b    process ✓ healthy  ready (tcp)  102    18302  8s     0
  c    process ↻ starting -            103    18303  1s     0
  d    process · stopped  -            -      18304  -      0

    ┌ Scripts: b ──────────────────────────────────────────────────────────┐
    │ filter: _                                                            │
    │ b                                                                    │
    │   start               (lifecycle)                                    │
    │ › create-test-user …  Create a user with a known password for manual…│
    │   flaky               Fails on its first two attempts                │
    │ workspace                                                            │
    │   needs-api           A workspace script that needs shop-api healthy │
    │ ↑/↓ move · Enter run (… = form) · type to filter · Esc               │
    └──────────────────────────────────────────────────────────────────────┘






 process-chain · profile - · daemon pid 4242 · ✓2 !0 ✗0 ·1 ?0 ↻1 ? help · q qui…
