crates/stems-tui/src/tests/snapshots/stems_tui__tests__actions__table-watch-paused-80x24.snap
---
source: crates/stems-tui/src/tests/actions.rs
expression: text
---
 stems · process-chain           1 Graph  2 [Table]  3 Detail  4 Logs  5 Events
  STEM TYPE    STATUS     REASON       PID    PORTS  UPTIME RESTARTS CPU   MEM
  a    process ✓ healthy  ready (tcp)  101    18301  9s     0
› b ⏸  process ✓ healthy  ready (tcp)  102    18302  8s     0
  c    process ↻ starting -            103    18303  1s     0
  d    process · stopped  -            -      18304  -      0

















 process-chain · profile - · daemon pid 4242 · ✓2 !0 ✗0 ·1 ?0 ↻1 ? help · q qui…
